# zpack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: python_ci.yaml  release-plz.yml  rust_ci.yaml
benches/: version_parser.rs
examples/: test.py
scripts/: ci_patch.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/constraint/: cmp.rs  depends.rs  if_then.rs  maximize.rs  minimize.rs  mod.rs  num_of.rs  spec_option.rs  value.rs
src/interface/: reader.rs
src/package/: constraint.rs  mod.rs  outline.rs  registry.rs  spec.rs  version.rs
src/package/constraint/: cmp.rs  depends.rs  equal.rs  if_then.rs  maximize.rs  minimize.rs  mod.rs  n_of.rs  num_of.rs  spec_option.rs  value.rs
src/package/version/: dot_separated.rs  mod.rs  other.rs  semver.rs
src/spec/: mod.rs  parse.rs  spec_option.rs
src/util/: error.rs  mod.rs  num.rs  parsers.rs  subscriber.rs
src/util/parse/: alphanumeric.rs  bounded.rs  consumer.rs  cursor.rs  enum.rs  ext.rs  integer.rs  literal.rs  map.rs  match.rs  mod.rs  multi.rs  optional.rs  raw.rs  then.rs  whitespace.rs
zpack_py/: Cargo.toml  pyproject.toml
