[package]
name = "zpack"
description = "A fast, configurable package manager which builds programs from source"
version = "0.1.0"
edition = "2024"

[features]
mpi = ["dep:mpi"]

[dependencies]
clap = { version = "4.5.41", features = ["deprecated", "derive", "cargo", "env", "unicode", "wrap_help", "string"] }
clap_complete = { version = "4.5.55", features = ["unstable-dynamic"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
mpi = { version = "0.8.0", optional=true, features = ["user-operations", "derive", "complex"] }
rune = { version = "0.14.0", features = ["std", "cli", "byte-code", "alloc", "bench", "capture-io"] }
rune-modules = { version = "0.14.0", features = ["full", "core", "fmt", "io", "test", "base64", "fs", "json", "macros", "nanorand", "process", "rand", "reqwest", "serde_json", "signal", "time", "tokio", "toml"] }
saphyr = "0.0.6"
syntect = { version = "5.2.0", features = ["default-fancy"] }
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "real_blackbox"] }

[[bench]]
name = "version_parser"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
debug = true
