[package]
name = "zpack"
description = "A fast, configurable package manager which builds programs from source"
version = "0.1.13"
authors = ["Toby Davis"]
edition = "2024"
readme = "./README.md"
homepage = "https://github.com/Pencilcaseman/zpack"
repository = "https://github.com/Pencilcaseman/zpack"
license-file = "./LICENSE"
keywords = ["package-manager", "build-tool", "hpc", "tooling"]
categories = ["command-line-utilities", "config", "development-tools::build-utils", "science"]
rust-version = "1.85.1"

include = []
exclude = []

publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zpack"
crate-type = ["rlib", "cdylib"]

[features]
default = ["tracing_release_max_level_off"]

cheap_errors = []

z3_static_link = ["z3/static-link-z3"]
z3_gh_release = ["z3/gh-release"]
z3_bundled = ["z3/bundled"]

tracing_max_level_error = ["tracing/max_level_error"]
tracing_max_level_warn = ["tracing/max_level_warn"]
tracing_max_level_info = ["tracing/max_level_info"]
tracing_max_level_debug = ["tracing/max_level_debug"]
tracing_max_level_trace = ["tracing/max_level_trace"]
tracing_max_level_off = ["tracing/max_level_off"]

tracing_release_max_level_error = ["tracing/release_max_level_error"]
tracing_release_max_level_warn = ["tracing/release_max_level_warn"]
tracing_release_max_level_info = ["tracing/release_max_level_info"]
tracing_release_max_level_debug = ["tracing/release_max_level_debug"]
tracing_release_max_level_trace = ["tracing/release_max_level_trace"]
tracing_release_max_level_off = ["tracing/release_max_level_off"]

mpi = ["dep:mpi"]

[dependencies]
anyhow = { version = "1.0.100" }
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = { version = "0.11.1", features = [] }
clap = { version = "4.5.48", features = ["deprecated", "derive", "cargo", "env", "unicode", "wrap_help", "string"] }
clap_complete = { version = "4.5.58", features = [] }
config-rs = "0.1.3"
itertools = "0.14.0"
mpi = { version = "0.8.0", optional=true, features = ["user-operations", "derive", "complex"] }
petgraph = { version = "0.8.3", features = ["serde-1", "rayon", "generate"] }
pyo3 = { version = "0.26.0", features = ["full"] }
saphyr = "0.0.6"
syntect = { version = "5.3.0", features = ["default-fancy"] }
tempfile = "3.23.0"
tracing = {version = "0.1.41", features = [] }
tracing-subscriber = "0.3.20"
z3 = { git = "https://github.com/prove-rs/z3.rs.git" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "real_blackbox"] }

[[bench]]
name = "version_parser"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
debug = true
